# AStar-CPP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  run_docker.sh
include/: a_star.h  custom_map.h  data_types.h  post_processing.h  utils.h
params/: map.yaml  params.yaml
src/: a_star.cpp  custom_map.cpp  post_processing.cpp  utils.cpp
src/tests/: test_planner.cpp
